--- a/html/ui.html
+++ b/html/ui.html
@@ -374,6 +374,15 @@
             </td>
         </tr>
         <tr>
+            <td colspan="3">Zónák megjelenítése:
+                <form class="right">
+
+                    <button type="button" class="showAllActionPointBtn btn">Zónajelzés be/ki</button>
+                </form>
+                <span class="descriptionText">Megjeleníti az összes zónát</span>
+            </td>
+        </tr>
+        <tr>
             <td colspan="3">
                 <p>ADMIN TOOLS:</p>
                 <ul>
