--- a/html/ui.html
+++ b/html/ui.html
@@ -424,7 +424,7 @@
             <th class="summaryStatHeadQualityRate" data-orderby="quality_rate">Elégedettség</th>
             <th class="summaryStatHeadSuccessRate" data-orderby="success_rate">Siker</th>
             <th class="summaryStatHeadRegistered" data-orderby="registered">Első fuvar</th>
-            <th class="summaryStatHeadLastActivity" data-orderby="last_activity">Utolsó aktivitás</th>
+            <th class="summaryStatHeadLastActivity" data-orderby="last_activity">Utolsó</th>
         </tr>
         <tr class="summaryStatisticsTableTr template">
             <td class="ranking"></td>
